js262/test/language/expressions/async-generator/early-errors-expression-arguments-in-formal-parameters.js


/*---
author: Caitlin Potter <caitp@igalia.com>
esid: sec-async-generator-function-definitions-static-semantics-early-errors
description: >
  It is a SyntaxError if FormalParameters contains arguments in strict mode.
negative:
  phase: parse
  type: SyntaxError
flags: [onlyStrict]
features: [async-iteration]
---*/

$DONOTEVALUATE();

(async function*(arguments) { });
